[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/sokodot_menu.webm" type="VideoStream" id=2]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = SubResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=17]
size = 48
font_data = SubResource( 16 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=20]
size = 48
font_data = SubResource( 19 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 20 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=23]
size = 20
font_data = SubResource( 22 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 23 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=9]
size = 128
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 2 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=26]
size = 32
font_data = SubResource( 25 )

[sub_resource type="Theme" id=27]
default_font = SubResource( 26 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=12]
size = 128
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = SubResource( 13 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LevelLabel" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 50.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )

[node name="MoveLabel" type="Label" parent="."]
margin_top = 50.0
margin_right = 102.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 87, 26 )
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Moves:"

[node name="MoveCounter" type="Label" parent="."]
margin_left = 109.0
margin_top = 50.0
margin_right = 211.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 87, 26 )
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="ResetLabel" type="Label" parent="."]
margin_left = 1132.0
margin_right = 1280.0
margin_bottom = 128.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "R: reset
ESC: menu "

[node name="WinLabel" type="Label" parent="."]
margin_left = 307.0
margin_top = 602.0
margin_right = 1008.0
margin_bottom = 679.0
theme = SubResource( 18 )
text = "You completed the level!"
align = 1

[node name="LoseLabel" type="Label" parent="."]
margin_left = 448.0
margin_right = 832.0
margin_bottom = 128.0
theme = SubResource( 4 )
align = 1

[node name="BeatLabel" type="Label" parent="."]
visible = false
margin_left = 307.0
margin_top = 564.0
margin_right = 1008.0
margin_bottom = 721.0
theme = SubResource( 21 )
text = "You've completed all levels!
Congratulations!"
align = 1
autowrap = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 2 )
autoplay = true

[node name="version" type="Label" parent="."]
margin_left = 806.0
margin_top = 238.0
margin_right = 915.0
margin_bottom = 278.0
theme = SubResource( 24 )
text = "Ver. 1.0"

[node name="Sokodot" type="Label" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 9 )
text = "Sokodot"
align = 1
valign = 1

[node name="ButtonControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="Menu" type="VBoxContainer" parent="ButtonControl"]
margin_left = 441.0
margin_top = 338.0
margin_right = 849.0
margin_bottom = 667.0

[node name="Play" type="Button" parent="ButtonControl/Menu"]
margin_right = 408.0
margin_bottom = 107.0
focus_neighbour_top = NodePath("../Quit")
text = "Play"
flat = true

[node name="Levels" type="Button" parent="ButtonControl/Menu"]
margin_top = 111.0
margin_right = 408.0
margin_bottom = 218.0
text = "Level select"
flat = true

[node name="Quit" type="Button" parent="ButtonControl/Menu"]
margin_top = 222.0
margin_right = 408.0
margin_bottom = 329.0
focus_neighbour_bottom = NodePath("../Play")
text = "Quit"
flat = true

[node name="LevelControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="Menu_Buttons" type="VBoxContainer" parent="LevelControl"]
margin_left = 9.0
margin_top = 278.0
margin_right = 1287.0
margin_bottom = 718.0
theme = SubResource( 27 )
__meta__ = {
"_editor_description_": ""
}

[node name="Level1_Button" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 591.0
margin_right = 687.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../Return_Button")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 1"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Level2_Button" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 585.0
margin_top = 61.0
margin_right = 693.0
margin_bottom = 118.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 2"
flat = true

[node name="Level3_Button" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 586.0
margin_top = 122.0
margin_right = 692.0
margin_bottom = 179.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 3"
flat = true

[node name="Level4_Button" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 585.0
margin_top = 183.0
margin_right = 692.0
margin_bottom = 240.0
focus_neighbour_top = NodePath("../Quit")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 4"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Level5_Button2" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 586.0
margin_top = 244.0
margin_right = 692.0
margin_bottom = 301.0
focus_neighbour_top = NodePath("../Quit")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 5"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Level6_Button3" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 584.0
margin_top = 305.0
margin_right = 693.0
margin_bottom = 362.0
focus_neighbour_top = NodePath("../Quit")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 6"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="Return_Button" type="Button" parent="LevelControl/Menu_Buttons"]
margin_left = 585.0
margin_top = 366.0
margin_right = 693.0
margin_bottom = 423.0
focus_neighbour_top = NodePath("../Level1_Button")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Return"
flat = true

[node name="Label" type="Label" parent="LevelControl"]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 12 )
text = "Sokodot"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="LevelControl"]
visible = false
margin_left = 922.0
margin_top = 392.0
margin_right = 1160.0
margin_bottom = 503.0
align = 1

[node name="PauseControl" type="Control" parent="."]
margin_left = 3.0
margin_right = 43.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -526, 459 )
theme = SubResource( 15 )

[node name="Pause" type="Label" parent="PauseControl"]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 9 )
text = "Paused"
align = 1
valign = 1

[node name="Menu_Buttons" type="VBoxContainer" parent="PauseControl"]
margin_top = 277.0
margin_right = 1278.0
margin_bottom = 717.0
__meta__ = {
"_editor_description_": ""
}

[node name="resume_button" type="Button" parent="PauseControl/Menu_Buttons"]
margin_left = 528.0
margin_right = 750.0
margin_bottom = 107.0
focus_neighbour_top = NodePath("../menu_button")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Resume"
flat = true

[node name="levels_button" type="Button" parent="PauseControl/Menu_Buttons"]
margin_left = 478.0
margin_top = 111.0
margin_right = 800.0
margin_bottom = 218.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level Select"
flat = true

[node name="menu_button" type="Button" parent="PauseControl/Menu_Buttons"]
margin_left = 487.0
margin_top = 222.0
margin_right = 790.0
margin_bottom = 329.0
focus_neighbour_bottom = NodePath("../resume_button")
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"
flat = true

[connection signal="pressed" from="ButtonControl/Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ButtonControl/Menu/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="ButtonControl/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level1_Button" to="." method="_on_Button_pressed" binds= [ "Level_1" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level2_Button" to="." method="_on_Button_pressed" binds= [ "Level_2" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level3_Button" to="." method="_on_Button_pressed" binds= [ "Level_3" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level4_Button" to="." method="_on_Button_pressed" binds= [ "Level_4" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level5_Button2" to="." method="_on_Button_pressed" binds= [ "Level_5" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Level6_Button3" to="." method="_on_Button_pressed" binds= [ "Level_6" ]]
[connection signal="pressed" from="LevelControl/Menu_Buttons/Return_Button" to="." method="_on_Return_Button_pressed"]
[connection signal="pressed" from="PauseControl/Menu_Buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseControl/Menu_Buttons/levels_button" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="PauseControl/Menu_Buttons/menu_button" to="." method="_on_menu_button_pressed"]
